initial commit. install-openshift.sh is updated. added hack of synk.yml in RH repo. vol.yml is updated.

--- a/vol.yaml
+++ b/vol.yaml
@@ -8,6 +8,6 @@ spec:
   accessModes:
     - ReadWriteOnce     
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
+  persistentVolumeReclaimPolicy: Recycle
   hostPath:
     path: /mnt/data/vol
